<resources>
    <string name="app_name">Filmes Populares ProjUdacity Stage 2</string>
    <string name="tituloPadrao">Filme</string>
    <string name="textoCarregando">carregando…</string>
    <string name="titulo_filme">Título do Filme:</string>
    <string name="tituloOriginal">Título Original:</string>
    <string name="idioma">Idioma:</string>
    <string name="sinopse">Sinopse:</string>
    <string name="dataFilme">Data de Lançamento:</string>
    <string name="str_menu_ordenamento">Ordenamento</string>
    <string name="str_menu_dados">Dados</string>
    <string name="str_intervalo_atualiz_menu">Intervalo de Atualizações</string>
    <string name="str_atualizar">Atualizar</string>
    <string name="str_nota">Nota de avaliação:</string>
    <string name="ult_atualizacao">Última atualização:</string>
</resources>
