<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/atualizar"
        android:icon="@drawable/ic_refresh_white_24dp"
        android:title="@string/str_atualizar"
        android:orderInCategory="100"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/ordemExibicao"
        android:icon="@drawable/ic_sort_white_24dp"
        android:title="@string/str_menu_ordenamento"
        android:orderInCategory="100"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/intervaloAtualizacao"
        android:icon="@drawable/ic_timer_white_24dp"
        android:title="@string/str_intervalo_atualiz_menu"
        android:orderInCategory="100"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/dadosOffline"
        android:icon="@drawable/ic_data_usage_white_24dp"
        android:title="@string/str_menu_dados"
        android:orderInCategory="100"
        app:showAsAction="ifRoom"/>

</menu>