<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/corFundo"
    android:orientation="vertical"
    tools:context="br.com.rochamendes.filmespopularesudacityprojectstage2.filmesDetalhes">

    <LinearLayout
        android:id="@+id/space1"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/corTexto"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/recyclerViewVideos"
        app:layout_constraintTop_toBottomOf="@+id/capaFilmeDetalhes"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewVideos"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintVertical_chainStyle="spread_inside"
        app:layout_constrainedHeight="true"
        app:layout_constraintVertical_weight="24"
        app:layout_constraintBottom_toTopOf="@+id/space"
        app:layout_constraintTop_toBottomOf="@+id/space1"/>

    <LinearLayout
        android:id="@+id/space"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/corTexto"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/recyclerViewVideos"
        app:layout_constraintBottom_toTopOf="@+id/recyclerViewReviews"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewReviews"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintHeight_max="200dp"
        app:layout_constraintVertical_chainStyle="spread_inside"
        app:layout_constrainedHeight="true"
        app:layout_constraintVertical_weight="24"
        app:layout_constraintTop_toBottomOf="@+id/space"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <ImageView
        android:id="@+id/capaFilmeDetalhes"
        android:layout_width="150dp"
        android:layout_height="0dp"
        app:layout_constraintVertical_weight="48"
        app:layout_constraintHorizontal_weight="40"
        app:layout_constraintVertical_chainStyle="spread_inside"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        android:layout_gravity="center"
        android:scaleType="fitCenter"
        android:src="@mipmap/ic_launcher_round"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/scrollDetalhes"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/space1"/>

    <ScrollView
        android:id="@+id/scrollDetalhes"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constrainedHeight="true"
        app:layout_constrainedWidth="true"
        app:layout_constraintHorizontal_weight="60"
        app:layout_constraintVertical_chainStyle="spread_inside"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintBottom_toBottomOf="@+id/capaFilmeDetalhes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/capaFilmeDetalhes"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tituloOriginal"
                android:textColor="@color/corTexto"
                android:textSize="@dimen/tamEtiquetas" />

            <TextView
                android:id="@+id/tituloOriginalFilme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Titulo Original"
                android:textColor="@color/corTexto"
                android:textSize="@dimen/tamTitulo" />


            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/idioma"
                android:textColor="@color/corTexto"
                android:textSize="@dimen/tamEtiquetas" />

            <TextView
                android:id="@+id/idioma"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Idioma"
                android:textColor="@color/corTexto"
                android:textSize="@dimen/tamDados" />


            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dataFilme"
                android:textColor="@color/corTexto"
                android:textSize="@dimen/tamEtiquetas" />

            <TextView
                android:id="@+id/data"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="data"
                android:textColor="@color/corTexto"
                android:textSize="@dimen/tamDados" />


            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_nota"
                android:textColor="@color/corTexto"
                android:textSize="@dimen/tamEtiquetas"
                tools:layout_editor_absoluteX="157dp"
                tools:layout_editor_absoluteY="457dp" />

            <TextView
                android:id="@+id/nota"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="@dimen/espacamentoCapasFilme"
                android:paddingBottom="@dimen/espacamentoCapasFilme"
                android:text="Nota"
                android:textColor="@color/corTexto"
                android:textSize="@dimen/tamDados"
                tools:layout_editor_absoluteX="53dp"
                tools:layout_editor_absoluteY="444dp" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sinopse"
                android:textColor="@color/corTexto"
                android:textSize="@dimen/tamEtiquetas"
                tools:layout_editor_absoluteX="32dp"
                tools:layout_editor_absoluteY="335dp" />

            <TextView
                android:id="@+id/sinopse"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:text="Sinopse"
                android:textColor="@color/corTexto"
                android:textSize="@dimen/tamTexto"
                tools:layout_editor_absoluteX="165dp"
                tools:layout_editor_absoluteY="247dp" />

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>